Fix title and content gap issue in main-content

--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
 }
 
 .body-container {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: max(150px) 6fr;
     width: 100%;
     height: 100vh;
 }
@@ -38,9 +39,7 @@
     align-items: center;
     color: aliceblue;
     font-weight: 500;
-    text-decoration: none;
 }
-
 
 .header {
     display: grid;
@@ -98,10 +97,9 @@ button {
     align-items: center;
 }
 
-
 .main-content {
     display:grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-column-start: 2;
     grid-row-start: 2;
     background-color: gainsboro;
@@ -125,16 +123,19 @@ button {
 
 .project-items > div {
     display:grid;
-    grid-template-rows: 3fr 1fr;
-    background-color: whitesmoke;
+    grid-template-rows: 1fr 8fr 1fr;
+    background-color: white;
     border-radius: 10px;
-    padding: 1em;
+    padding: 1.5em;
+    box-shadow: inset 5px 0px burlywood;
 }
 
 .action-keys {
     display:grid;
-    grid-template-columns: 5fr repeat(3,1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr repeat(3,0.3fr);
+    grid-row: 3;
+    justify-items: center;
+    align-items: flex-end;
 }
 
 .announcements-container {
@@ -146,12 +147,22 @@ button {
 .announcements-items {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    background-color: whitesmoke;
+    background-color: white;
     border-radius: 10px;
     gap: 20px;
     height: 80%;
     margin: 1em 0;
-    padding: 1em;
+    padding: 1.5em;
+}
+
+.announcements-items > div > h3 {
+    padding-bottom: 0.5em;
+}
+
+.announcements-items > div {
+    border-bottom: 1px solid burlywood;
+    padding-bottom: 1em;
+    font-size:small;
 }
 
 .trending-container {
@@ -163,12 +174,12 @@ button {
 .trending-items {
     display: grid; 
     grid-template-rows: repeat(4,1fr);
-    background-color: whitesmoke;
+    background-color: white;
     border-radius: 10px;
     gap: 20px;
     height: 80%;
     margin: 1em 0;
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .trending-items > a {
@@ -183,8 +194,13 @@ button {
 
 .icons:hover {
     cursor: pointer;
+    transform:scale(1.05)
 }
 
 button:hover {
     cursor: pointer;
 }
+
+.sidebar-items > a:hover, .project-items > div:hover, .header-item1:hover, .header-item2:hover, button:hover {
+    transform:scale(1.03)
+q}
